# DEAH_copy

./: docker-compose.yml  migrate_to_mysql.py  start-dev.sh  start.sh
WebApp/: README.md  (+1 more)
core/design/agents/mermaid2drawio-converter/: README.md  pyproject.toml  setup.py
core/design/agents/mermaid2drawio-converter/drawio_output/: Opt1_Composer_Dataflow_BigQuery.drawio  Opt1_ER_Diagram.drawio  Opt2_Composer_Dataproc_BigQuery.drawio  Opt2_Dimensional_Model_Diagram.drawio  Opt3_Architecture_Diagram.drawio  Opt3_Pub_Sub_Dataflow_BigQuery.drawio  Opt4_Why_Option_1_Wins.drawio  arc_SCRUM-116_20260417_11_flow.drawio  arc_SCRUM-117_20260417_12_flow.drawio  arc_SCRUM-118_20260417_14_flow.drawio  arc_SCRUM-123_20260420_06_flow.drawio  arc_SCRUM-123_20260420_14_flow.drawio  arc_SCRUM-123_20260420_16_flow.drawio  arc_SCRUM-123_20260421_08_flow_option1.drawio  arc_SCRUM-123_20260421_08_flow_option2.drawio  arc_SCRUM-123_20260421_08_flow_option3_recommended.drawio  arc_SCRUM-123_20260421_10_flow_option1.drawio  arc_SCRUM-123_20260421_10_flow_option2_recommended.drawio  arc_SCRUM-123_20260421_10_flow_option3.drawio  arc_SCRUM-145_20260420_19_flow.drawio  arc_SCRUM-149_20260420_23_flow.drawio  arc_SCRUM-153_20260421_11_flow_option1.drawio  arc_SCRUM-153_20260421_11_flow_option2_recommended.drawio  arc_SCRUM-153_20260421_11_flow_option3.drawio  arc_SCRUM-160_20260422_07_flow_option1.drawio  arc_SCRUM-160_20260422_07_flow_option2_recommended.drawio  arc_SCRUM-160_20260422_07_flow_option3.drawio  arc_SCRUM-160_20260422_17_flow_option1.drawio  arc_SCRUM-160_20260422_17_flow_option2.drawio  (+28 more)
(+858 files in other folders)
